feat(dashboard): list containers with newer image tags
